tests/e2e/keywords/time_is_keyword.error
Error: syntax error in story at line 1, column 1

1|    time = 1
      ^^^^

E0020: `time` is a reserved keyword
